--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@
   --outlinegray: #444444 !important;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
